* Added VC2017 project for RTConsole, deleted MSVC2005 one * Big change with RTPack - tools directory is gone and RTPack is now a normal project * RTPack no longer requires CLanlib V1.0 to build, all functions switched over to use Proton classes like SoftSurface * RTPack now optionally builds without PVRTC support (if RT_NO_PVR is defined.  The VC2017 project has an added configuration setup for this mode) * Linux media building scripts moved to /RTPack/linux but still function mostly the same (Aki set that up a while ago, I did some small tweaks so it still works) * JPGSurfaceLoader class can now also save JPG files out (yeah, great file name..) * All sample projects build on Raspberry Pi (RTSimpleApp/linux/linux_compile.sh etc)

--- a/RTBareBones/linux/CMakeLists.txt
+++ b/RTBareBones/linux/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 
+ENABLE_LANGUAGE(C)
+
 include(CheckIncludeFile)
 CHECK_INCLUDE_FILE(/opt/vc/include/bcm_host.h ISRASPBERRYPIE)
 
@@ -15,7 +17,7 @@ set(CMAKE_BUILD_TYPE "Release") #use Release or Debug
 #for raspberry directory
 #link_directories("/usr/lib/arm-linux-gnueabihf")
 
-project(rtbarebones)
+project(RTBareBones)
 include(../../shared/linux/Proton.cmake)
 #include(../source)
 
@@ -24,4 +26,4 @@ proton_include_components(CustomInputComponent ArcadeInputComponent)
 
 set(APP "../source")
 proton_set_sources("${APP}/App.cpp")
-target_link_libraries(rtbarebones)
+target_link_libraries(RTBareBones)
