--- a/RTBareBones/windows_vs2017/winRTBareBones.vcxproj
+++ b/RTBareBones/windows_vs2017/winRTBareBones.vcxproj
@@ -725,7 +725,7 @@
     <Link>
       <AdditionalDependencies>opengl32.lib;zdll.lib;wsock32.lib;SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
-      <AdditionalLibraryDirectories>..\..\shared\win\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\..\shared\win\lib;..\..\shared\win\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>$(OutDir)RTBareBones.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
