Removed some files that can be generated automatically, added more t the .gitignore so it's possible to build the examples with msvc without polluting the git stuff

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,14 @@ NotShared/
 *.obj
 *.DS_Store
 *.pdb
+RTSimpleApp/media/interface/*.rttex
+RTSimpleApp/media/interface/*.rtfont
+RTSimpleApp/bin/
+shared/win/utils/log.txt
+.vs
+*.tlog
+*.log
+*.recipe
+*.vcxproj.user
+**/bin/log.txt
+**/bin/*.exe
