* Tweaks to the new Android gradle build system * Added support for using FMOD on Android * Some gamepad fixes * libcurl drop in replacement file NetHTTP_libCURL.cpp now must be added to the project, it's no longer using #include trickery.  Only applicable if you're using the RT_USE_LIBCURL * strcpy_safe added to MiscUtils.cpp, I needed it for Dink * bool FileExistsRaw(const string &fName) added to ResourceUtils.cpp, it ignores virtual filetrees and junk, useful to me for doing Android file tests

--- a/RTSimpleApp/windows_vc/winRTSimpleApp.vcxproj
+++ b/RTSimpleApp/windows_vc/winRTSimpleApp.vcxproj
@@ -264,7 +264,7 @@
     <Link>
       <AdditionalDependencies>opengl32.lib;audiere.lib;zlibwapi.lib;wsock32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
-      <AdditionalLibraryDirectories>..\..\shared\win\lib\64;..\..\shared\win\fmod\api\lib;..\..\shared\win\audiere\lib64;..\..\shared\win\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\..\shared\win\lib\64;..\..\shared\win\fmod\api\lib\x64;..\..\shared\win\audiere\lib64;..\..\shared\win\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>$(OutDir)RTSimpleApp.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
@@ -284,9 +284,9 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>opengl32.lib;fmod64_vc.lib;zlibwapi.lib;wsock32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;fmod_vc.lib;zlibwapi.lib;wsock32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
-      <AdditionalLibraryDirectories>..\..\shared\win\lib\64;..\..\shared\win\audiere\lib64;..\..\shared\win\lib\x64;..\..\shared\win\fmodstudio\api\lowlevel\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\..\shared\win\lib\64;..\..\shared\win\audiere\lib64;..\..\shared\win\lib\x64;..\..\shared\win\fmodstudio\api\core\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>$(OutDir)RTSimpleApp.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
@@ -369,9 +369,9 @@
       <DisableSpecificWarnings>4267;4244;4244;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>opengl32.lib;fmod64_vc.lib;zlibwapi.lib;wsock32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;fmod_vc.lib;zlibwapi.lib;wsock32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
-      <AdditionalLibraryDirectories>..\..\shared\win\lib\64;..\..\shared\win\lib\x64;..\..\shared\win\audiere\lib64;..\..\shared\win\fmodstudio\api\lowlevel\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\..\shared\win\lib\64;..\..\shared\win\lib\x64;..\..\shared\win\audiere\lib64;..\..\shared\win\fmodstudio\api\core\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
