--- a/RTSimpleApp/AndroidGradle/app/build.gradle
+++ b/RTSimpleApp/AndroidGradle/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation files('libs\\fmod.jar')
     //testImplementation 'junit:junit:4.13.2'
     //androidTestImplementation 'com.android.support.test:runner:1.0.2'
     //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
