--- a/RTSimpleApp/AndroidGradle/app/src/main/cpp/CMakeLists.txt
+++ b/RTSimpleApp/AndroidGradle/app/src/main/cpp/CMakeLists.txt
@@ -28,7 +28,8 @@ include_directories("${SHARED}/android/optional_src/libs")
 
 
 
-add_definitions(-Wno-error=format-security -DANDROID_NDK -DBOOST_ALL_NO_LIB -DBUILD_ANDROID -DPLATFORM_ANDROID -DRT_JPG_SUPPORT -DRT_ENABLE_FMOD)
+#for fmod audio, you'd add -DRT_ENABLE_FMOD below
+add_definitions(-Wno-error=format-security -DANDROID_NDK -DBOOST_ALL_NO_LIB -DBUILD_ANDROID -DPLATFORM_ANDROID -DRT_JPG_SUPPORT)
 
 message("Building ${CMAKE_BUILD_TYPE}")
 
@@ -50,7 +51,7 @@ add_library( # Sets the name of the library.
         SHARED
 
 
-${SHARED}/PlatformSetup.cpp ${SHARED}/android/AndroidUtils.cpp ${SHARED}/android/AndroidApp.cpp ${SHARED}/Audio/AudioManager.cpp ${SHARED}/Audio/AudioManagerFMODStudio.cpp
+${SHARED}/PlatformSetup.cpp ${SHARED}/android/AndroidUtils.cpp ${SHARED}/android/AndroidApp.cpp ${SHARED}/Audio/AudioManager.cpp ${SHARED}/Audio/AudioManagerAndroid.cpp
 ${CLANMATH}/angle.cpp ${CLANMATH}/mat3.cpp ${CLANMATH}/mat4.cpp ${CLANMATH}/rect.cpp ${CLANMATH}/vec2.cpp ${CLANMATH}/vec3.cpp ${CLANMATH}/vec4.cpp 
 ${SHARED}/Entity/Entity.cpp ${SHARED}/Entity/Component.cpp ${SHARED}/GUI/RTFont.cpp ${SHARED}/Manager/Console.cpp 
 ${SHARED}/Manager/GameTimer.cpp ${SHARED}/Manager/MessageManager.cpp ${SHARED}/Manager/ResourceManager.cpp ${SHARED}/Manager/VariantDB.cpp ${SHARED}/Math/rtPlane.cpp 
@@ -91,8 +92,8 @@ ${APP}/GUI/ParticleTestMenu.cpp ${APP}/GUI/AboutMenu.cpp ${APP}/GUI/TouchTestMen
 #add_library(lib_crypto STATIC IMPORTED)
 #set_target_properties(lib_crypto PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/${SHARED}/android/optional_src/libs/libopenssl/${ANDROID_ABI}/libcrypto.a)
 
-add_library(lib_fmod STATIC IMPORTED)
-set_target_properties(lib_fmod PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/${SHARED}/android/optional_src/libs/fmodstudio/api/core/lib/${ANDROID_ABI}/libfmod.so)
+#add_library(lib_fmod STATIC IMPORTED)
+#set_target_properties(lib_fmod PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/${SHARED}/android/optional_src/libs/fmodstudio/api/core/lib/${ANDROID_ABI}/libfmod.so)
 
 
 # Searches for a specified prebuilt library and stores the path as a
@@ -120,4 +121,4 @@ target_link_libraries( # Specifies the target library.
 
         # Links the target library to the log library
         # included in the NDK.
-        ${log-lib} dl GLESv1_CM z lib_fmod)
+        ${log-lib} dl GLESv1_CM z) #add lib_fmod or whatever after z if you need it
