--- a/RTSimpleApp/linux/CMakeLists.txt
+++ b/RTSimpleApp/linux/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 2.6)
 
 ENABLE_LANGUAGE(C)
 
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build." FORCE)
+endif()
+
 include(CheckIncludeFile)
 set (CMAKE_REQUIRED_INCLUDES "/opt/vc/include")
 CHECK_INCLUDE_FILE(bcm_host.h ISRASPBERRYPIE)
@@ -14,7 +18,6 @@ endif(ISRASPBERRYPIE)
 
 add_definitions(-DRT_LINUX)
 
-set(CMAKE_BUILD_TYPE "Release") #use Release or Debug
 project(RTSimpleApp)
 
 include(../../shared/linux/Proton.cmake)
@@ -26,4 +29,7 @@ proton_use_linearparticles()
 
 set(APP "../source")
 include_directories("${APP}")
-proton_set_sources("${APP}/App.cpp" "${APP}/Component/ParticleTestComponent.cpp" "${APP}/GUI/DebugMenu.cpp" "${APP}/GUI/EnterNameMenu.cpp" "${APP}/GUI/MainMenu.cpp" "${APP}/GUI/ParticleTestMenu.cpp" "${APP}/GUI/AboutMenu.cpp" "${APP}/GUI/TouchTestMenu.cpp" "${APP}/Component/TouchTestComponent.cpp")
+proton_set_sources("${APP}/App.cpp" "${APP}/Component/ParticleTestComponent.cpp" "${APP}/GUI/DebugMenu.cpp" "${APP}/GUI/EnterNameMenu.cpp"
+    "${APP}/GUI/MainMenu.cpp" "${APP}/GUI/ParticleTestMenu.cpp" "${APP}/GUI/AboutMenu.cpp" 
+    "${APP}/GUI/TouchTestMenu.cpp" "${APP}/Component/TouchTestComponent.cpp" 
+    "${APP}/GUI/MainMenu.cpp" "${APP}/GUI/UTF16TestMenu.cpp")
