--- a/RTSimpleApp/linux/CMakeLists.txt
+++ b/RTSimpleApp/linux/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/../bin)
+
 ENABLE_LANGUAGE(C)
 
 if(NOT CMAKE_BUILD_TYPE)
