--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ shared/win/fmodstudio
 RTBareBones/linux/build
 RTSimpleApp/linux/build
 RTPack/linux/build
+RTSimpleApp/linux/build
+RTSimpleApp/build
