* RTConsole example app updated * HTML5 builds fixed * A few more classes made C++`17 compliant * Added Surface::CreateSoftSurfaceFromSurface * SoftSurface::WriteBMP can now also write 8 bit palettized images * ScrollBarRenderer's scroll bar can now be directly moved by the mouse (in addition to the touch/grab system) * TarHandler had some bugfixes and optimizations (thanks to drone1400)

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ NotShared/
 *.obj
 *.DS_Store
 *.pdb
+*.iobj
+*.ipdb
 RTSimpleApp/media/interface/*.rttex
 RTSimpleApp/media/interface/*.rtfont
 RTSimpleApp/bin/
@@ -60,3 +62,7 @@ RTPack/bin/RTPack.iobj
 RTPack/bin/RTPack.ipdb
 xcuserdata
 RTPack.vcxproj.FileListAbsolute.txt
+DMODTester/
+RTConsole/windows_vc2017/RTConsole.vcxproj
+RTConsole/windows_vc2017/RTConsole.vcxproj.filters
+
